fixes weird weird admin table layout bug

--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -48,3 +48,6 @@ select.link-to option[value="post"],
   display: none;
 }
 
+table.fixed {
+  table-layout: auto !important;
+}
